<?xml version="1.0" encoding="utf-8"?>

<resources>

	<style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">1dp</item>
	</style>
    <string name="hello">Hello World!</string>
    <string name="app_name">Distrivia</string>
    <string name="login">Sign In</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="score">Score:</string>
    <string name="question">Q: How many feet are in a mile?</string>
    <string name="example_answer1">1000</string>
    <string name="example_answer2">5280</string>
    <string name="example_answer3">4865</string>
    <string name="example_answer4">9300</string>
    <string name="submit">Submit</string>
    <string name="public_games">Join a game?</string>
    <string name="join_public">Join Public</string>
    <string name="private_games">Join Private Game</string>
    <string name="private_name">Name:  </string>
    <string name="private_pass">Pass:    </string>
    
    <string name="qnum_prompt">10</string>
    <string-array name="qnum_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>
</resources>
