<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ImageView android:id="@+id/imageView1" android:src="@drawable/distriviaw" android:layout_width="fill_parent" android:layout_height="40dip"></ImageView>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/login_layout" android:paddingTop="10sp">
    <TextView android:id="@+id/login_label"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:text="@string/login" android:textSize="20sp"/>
		
    <RelativeLayout android:id="@+id/login_sublayout"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@+id/login_label"
    	android:paddingLeft="20sp" android:paddingTop="10sp" android:paddingRight="20sp">
    
		<TextView android:id="@+id/login_label_username"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_alignLeft="@+id/login_sublayout"
	    	android:text="@string/login_username"
	    	android:textSize="20sp" android:layout_alignParentRight="true" android:layout_alignParentLeft="true"/>
	    	
	    <EditText android:id="@+id/login_input_username"
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@+id/login_label_username"
	    	android:layout_alignLeft="@+id/login_label_username"
	    	android:layout_alignRight="@+id/login_label_username"
	    	android:hint="@string/login_username_hint"
	    	/>
	    	
	    <TextView android:id="@+id/login_label_password"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_below="@+id/login_input_username"
			android:layout_alignLeft="@+id/login_input_username"
			android:layout_alignRight="@+id/login_input_username"
			android:text="@string/login_password"
			android:textSize="20sp"/>
			
	    <EditText android:id="@+id/login_input_password" 
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	    	android:layout_below="@+id/login_label_password"
	    	android:layout_alignLeft="@+id/login_label_password"
	    	android:layout_alignRight="@+id/login_label_password"
	    	android:hint="@string/login_password_hint"
	    	android:password="true"
	    	/>
	    	
	    <Button android:text="Register" 
	    	android:layout_marginTop="20.0sp"
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/register_button" 
	    	android:layout_below="@+id/login_input_password" android:layout_width="140dip"></Button>
	    	
	    <Button android:id="@+id/login_button"
	      android:layout_marginTop="20.0sp"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/login_input_password"
	    	android:text="@string/login_button" android:layout_width="140dip"
	    	android:layout_toRightOf="@+id/register_button"/>
	</RelativeLayout>
</RelativeLayout>
</LinearLayout>
