<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
    <ImageView android:id="@+id/imageView1"
     android:src="@drawable/distriviaw"
     android:layout_width="fill_parent"
     android:layout_height="40dip">
     </ImageView>
     
    <LinearLayout android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/public_layout">
     
        <TextView android:id="@+id/textView2"
         android:text="@string/public_games"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent" 
         android:layout_marginTop="20.0sp"
         android:layout_marginBottom="20.0sp"
         android:textSize="20sp">
        </TextView>
        
        <Button android:id="@+id/join_public_button"
         android:layout_height="wrap_content"
         android:text="@string/join_public"
         android:layout_width="fill_parent" android:layout_marginBottom="20dip">
         </Button>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:id="@+id/private_layout">
     
        <TextView android:id="@+id/textView3"
         android:text="@string/private_games"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp">
        </TextView>
        
        <LinearLayout android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         
            <TextView android:id="@+id/textView1"
             android:text="@string/private_name"
             android:layout_height="wrap_content" android:layout_width="75dip">
            </TextView>
            
            <EditText android:text=""
             android:id="@+id/private_name_text"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent">
             </EditText>
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/linearLayout2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         
            <TextView android:id="@+id/textView4"
             android:text="@string/private_pass"
             android:layout_width="75dip"
             android:layout_height="wrap_content">
            </TextView>
            
            <EditText android:text=""
             android:id="@+id/private_pass_text"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:password="true">
            </EditText>
            
        </LinearLayout>
        
        <Button android:layout_height="wrap_content"
         android:id="@+id/join_private_button"
         android:text="Join Private"
         android:layout_width="fill_parent">
        </Button>
        
    </LinearLayout>
    <TextView android:layout_height="wrap_content"
     android:layout_width="fill_parent" 
     android:text="" 
     android:id="@+id/num_players_text">
    </TextView>
    
</LinearLayout>
